--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,10 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  meta: ">=1.1.0 <2.0.0"
+  equatable: ^0.2.0
+  bloc: ^0.14.0
+  flutter_bloc: ^0.18.0
   flutter:
     sdk: flutter
 
@@ -30,7 +34,7 @@ dev_dependencies:
 
 
 # For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+# following module.battery.page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
