--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   equatable: ^0.2.0
   bloc: ^0.14.0
   flutter_bloc: ^0.18.0
+  http: ^0.12.0+2
   flutter:
     sdk: flutter
 
@@ -29,9 +30,10 @@ dependencies:
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
+  test: ^1.6.3
+  mockito: 4.1.0
   flutter_test:
     sdk: flutter
-
 
 # For information on the generic Dart part of this file, see the
 # following module.battery.page: https://dart.dev/tools/pub/pubspec
